# lung-compare

./: .gitignore  README.md  plan.md  pyproject.toml
models/lungtumormask/: pyproject.toml
models/nnunet_pretrained/: pyproject.toml
models/totalsegmentator/: pyproject.toml
models/voxtell/: pyproject.toml
scripts/: compute_metrics.py  download_cases.py  preprocess.py  run_inference.py  setup_weights.py
